--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
-<html>
+<!DOCTYPE html>
+    <html>
 <body>
 <h1>1</h1>
-<img  src="https://avatars.githubusercontent.com/u/261262137?v=4" width="7500" height="4500">
 <h2>11</h2>
 <hr>
-<h3>111</h3>
-<!-- eu sou um comentario --!>
+<h3>111</h3> 
 <h4>1111</h4>
 <h5>11111</h5>
 <h6>111111</h6>
 <p>nop</p>
 <p>plncnaap</p>
 <p>nao sou</p>
+
+
+      <a href="https://github.com/HReidelas"> <img style="height:auto;" alt="" src="https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260" class="avatar avatar-user width-full border color-bg-default"
+	     onmouseover="this.src='file:///C:/Users/Aluno/Downloads/fe7801f5-3ba7-4f21-be63-b39bb0341aea%20(1).png'" 
+     onmouseout="this.src='https://avatars.githubusercontent.com/u/261262137?v=4'"> </a>
+      <br><br>
+      <a href="https://www.linkedin.com/in/andersonfontesdev/"> <img alt="" src="https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
+     onmouseover="this.src='file:///C:/Users/Aluno/Downloads/fe7801f5-3ba7-4f21-be63-b39bb0341aea%20(1).png'" 
+     onmouseout="this.src='https://avatars.githubusercontent.com/u/261262137?v=4'"> </a>
+
 </body>
+	
 </html>
+
+
