tentano arrumar novamente

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <br><br>
         <a href="https://www.linkedin.com/in/andersonfontesdev/"> <img alt=""
                         src="https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
-                        onmouseover="this.src='fe7801f5-3ba7-4f21-be63-b39bb0341aea (1) (1).jpg'"
-                        onmouseout="this.src='261262137.jpg'"> </a>
+                        onmouseover="this.src='img/fe7801f5-3ba7-4f21-be63-b39bb0341aea (1) (1).jpg'"
+                        onmouseout="this.src='img/261262137.jpg'"> </a>
 
 </body>
 
