--- a/2k26/index.html
+++ b/2k26/index.html
@@ -17,11 +17,11 @@
         <a href="https://github.com/HReidelas"> <img style="height:auto;" alt=""
                         src="https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
                         class="avatar avatar-user width-full border color-bg-default"
-                        onmouseover="this.src= 'fe7801f5-3ba7-4f21-be63-b39bb0341aea (1) (1).jpg'"
-                        onmouseout="this.src='261262137.jpg'"> </a>
+                        onmouseover="this.src= 'img/cor.jpg'"
+                        onmouseout="this.src='img/incor.jpg'"> </a>
         <br><br>
-        <a href="https://www.linkedin.com/in/andersonfontesdev/"> <img alt=""
-                        src="https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
+        <a href="img/https://www.linkedin.com/in/andersonfontesdev/"> <img alt=""
+                        src="img/https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
                         onmouseover="this.src='img/fe7801f5-3ba7-4f21-be63-b39bb0341aea (1) (1).jpg'"
                         onmouseout="this.src='img/261262137.jpg'"> </a>
 
