--- a/2k26/index.html
+++ b/2k26/index.html
@@ -14,14 +14,14 @@
         <p>nao sou</p>
 
 
-        <a href="https://github.com/HReidelas"> <img src="https://avatars.githubusercontent.com/u/261262137?v=4"
-                        width="260" height="260" onmouseover="this.src= 'cor.jpg'" onmouseout="this.src='incor.jpg'">
+        <a href="https://github.com/HReidelas"> <img src="img/cor.jpg"
+                        width="260" height="260" onmouseover="this.src= 'img/incor.jpg'" onmouseout="this.src='cor.jpg'">
         </a>
         <br><br>
         <a href="img/https://www.linkedin.com/in/andersonfontesdev/"> <img
-                        src="img/https://avatars.githubusercontent.com/u/261262137?v=4" width="260" height="260"
-                        onmouseover="this.src='img/fe7801f5-3ba7-4f21-be63-b39bb0341aea (1) (1).jpg'"
-                        onmouseout="this.src='img/261262137.jpg'"> </a>
+                        src="img/cor.jpg" width="260" height="260"
+                        onmouseover="this.src='img/incor.jpg'"
+                        onmouseout="this.src='img/cor.jpg'"> </a>
 
 </body>
 
