--- a/2k26/index.html
+++ b/2k26/index.html
@@ -14,14 +14,15 @@
         <p>nao sou</p>
 
 
-        <a href="https://github.com/HReidelas"> <img src="img/cor.jpg"
-                        width="260" height="260" onmouseover="this.src= 'img/incor.jpg'" onmouseout="this.src='cor.jpg'">
+        <a href="https://github.com/HReidelas"> <img src="image.png"
+                        onmouseover="this.src= 'image.png'" 
+                        onmouseout="this.src='image1.png'">
         </a>
         <br><br>
         <a href="img/https://www.linkedin.com/in/andersonfontesdev/"> <img
-                        src="img/cor.jpg" width="260" height="260"
-                        onmouseover="this.src='img/incor.jpg'"
-                        onmouseout="this.src='img/cor.jpg'"> </a>
+                        src="image.png" width="260" height="260"
+                        onmouseover="this.src='image.png'"
+                        onmouseout="this.src='image1.png'"> </a>
 
 </body>
 
